# obs-screenshot

./: .gitignore  CMakeLists.txt  README.md
data/locale/: en-US.ini
src/: obs-screenshot.cpp
